--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 
     <!-- Alta de trabajadores -->
     <section>
+      <div class="container">
+  <h2>Alta de Trabajadores</h2>
+  <input type="text" id="dniTrabajador" placeholder="DNI">
+  <input type="text" id="nombreTrabajador" placeholder="Nombre">
+  <input type="text" id="telefonoTrabajador" placeholder="Teléfono">
+  <input type="email" id="correoTrabajador" placeholder="Correo">
+  <button id="btnRegistrarTrabajador">Registrar Trabajador</button>
+
+  <!-- Contenedor donde se mostrará la lista de trabajadores -->
+  <div id="listaTrabajadores"></div>
+</div>
         <h2>Alta de Trabajador</h2>
         <form id="formTrabajador">
             <input type="text" id="dni" placeholder="DNI" required>
